cluster/apps/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: torrent-tcp
      port: 18289
      targetPort: 18289
    - name: torrent-udp
      port: 18289
      protocol: UDP
      targetPort: 18289
  type: ClusterIP
