cluster/apps/qbittorrent/ingress.yaml
---
# Ingress for qbittorrent
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: networking-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "download-box"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qb.kblb.io
      secretName: my-certs-qbittorrent
  rules:
    - host: qb.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
